--- a/styles/style1.css
+++ b/styles/style1.css
@@ -1,10 +1,137 @@
-.imgreparacion  {
-    width: 100px;
-    height: 100px;
-    position: relative;
-    top: -100px;
-    left: 500px;
+
+
+@media screen and (max-width: 1900px){
+
+            body {
+
+            background-color: rgb(142, 100, 177);
+            }
+            .menu {
+                background-color: rgb(255, 255, 255);
+                width: 95%;
+                height: 60px;
+                
+                display:block;
+                margin:auto;
+                padding: 5px;
+                
+                
+                
+            }
+
+            .menu .imglogo {
+                width: 60px;
+                height: 60px;
+                float: left;
+                
+                }
+
+            .menu h1{
+
+                font-family: 'Indie Flower', cursive;
+                position: relative;
+                top: -15px;
+                left: -20;
+
+            }
+            .main {
+                background-color: rgb(0, 140, 255);
+                width: 80%;
+                left: auto;
+                
+                display:block;
+                margin:auto;
+                margin-top: 30px;
+                padding: 15px;
+                text-align: center;
+                
+            }
+            .main h1{
+                width: auto;
+                font-size: 40px;
+                
+                
+            }
+            .main h3 {
+                width: auto;
+                font-size: 30px;
+            }
+                    
+            .main .imgreparacion  {
+                width: 100px;
+                height: 100px;
+                
+                top: auto;
+                left: center;
+
+            }
+
 }
-body {
-    background-color: rgb(142, 100, 177);
+        
+
+        
+@media screen and (max-width: 500px){
+    body {
+
+        background-color: rgb(142, 100, 177);
+        }
+        .menu {
+            background-color: rgb(255, 255, 255);
+            width: 95%;
+            height: 40px;
+            
+            display:block;
+            margin:auto;
+            padding: 5px;
+            
+            
+            
+        }
+
+        .menu .imglogo {
+            width: 40px;
+            height: 40px;
+            float: left;
+            
+            }
+
+        .menu h1{
+            font-size: 25px;
+            font-family: 'Indie Flower', cursive;
+            position: relative;
+            top: -12px;
+            left: -20;
+
+        }
+        .main {
+            background-color: rgb(0, 140, 255);
+            width: 80%;
+            left: auto;
+            
+            display:block;
+            margin:auto;
+            margin-top: 15px;
+            padding: 10px;
+            text-align: center;
+            
+        }
+        .main h1{
+            width: auto;
+            font-size: 25px;
+            
+            
+        }
+        .main h3 {
+            width: auto;
+            font-size: 15px;
+        }
+                
+        .main .imgreparacion  {
+            width: 60px;
+            height: 60px;
+            
+            top: auto;
+            left: center;
+
+        }
 }
