--- a/styles/style1.css
+++ b/styles/style1.css
@@ -1,6 +1,6 @@
 
 
-@media screen and (max-width: 1900px){
+
 
             body {
 
@@ -44,6 +44,7 @@
                 margin-top: 30px;
                 padding: 15px;
                 text-align: center;
+                max-width: 900px;
                 
             }
             .main h1{
@@ -66,7 +67,7 @@
 
             }
 
-}
+
         
 
         
