--- a/styles/style1.css
+++ b/styles/style1.css
@@ -14,6 +14,7 @@
                 display:block;
                 margin:auto;
                 padding: 5px;
+                max-width: 1230px;
                 
                 
                 
