--- a/css/styles_dylan.css
+++ b/css/styles_dylan.css
@@ -168,3 +168,32 @@
 .text-size-20 {
     font-size: 1.2rem;
 }
+
+
+/*Dark mode*/
+
+@media (prefers-color-scheme: dark) {
+    .dark-mode {
+        transition: 1s;
+        background-color: rgb(36, 38, 48);
+        color: white !important;
+    }
+    .dark-mode-white {
+        transition: 1s;
+        background-color: rgb(255, 255, 255)!important;
+        color: rgb(0, 0, 0) !important;
+    }
+    .dark-mode-certificados {
+        opacity: 0.7;
+    }
+}
+
+@media (prefers-color-scheme: light) {
+    .dark-mode {
+        transition: 1s;
+        background-color: rgb(250, 250, 250);
+    }
+    .dark-mode-white {
+        transition: 1s;
+    }
+}
