--- a/css/styles_dylan.css
+++ b/css/styles_dylan.css
@@ -187,8 +187,10 @@
         opacity: 0.7;
     }
     #padrepreloader {
-        color: white;
         background: black;
+    }
+    .lds-roller div:after {
+        background: #ffffff;
     }
 }
 
